--- a/EvoS.PacketInspector/MainWindow.glade
+++ b/EvoS.PacketInspector/MainWindow.glade
@@ -2,6 +2,9 @@
 <!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.18"/>
+  <object class="GtkEntryCompletion" id="_entrycompletionPacketTypeFilter">
+    <property name="inline_completion">True</property>
+  </object>
   <object class="GtkAccelGroup" id="accelgroupFind"/>
   <object class="GtkEntryCompletion" id="entryCompletionGameObject"/>
   <object class="GtkImage" id="imageFind">
@@ -41,7 +44,7 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="buttonPacketFilter">
+              <object class="GtkButton" id="_buttonPacketFilter">
                 <property name="label" translatable="yes">Filter</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -189,9 +192,9 @@
       </object>
     </child>
   </object>
-  <object class="GtkPopover" id="popoverPacketFilter">
+  <object class="GtkPopover" id="_popoverPacketFilter">
     <property name="can_focus">False</property>
-    <property name="relative_to">buttonPacketFilter</property>
+    <property name="relative_to">_buttonPacketFilter</property>
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
@@ -202,12 +205,13 @@
         <property name="margin_bottom">4</property>
         <property name="orientation">vertical</property>
         <child>
-          <object class="GtkSearchEntry">
+          <object class="GtkSearchEntry" id="_searchEntryPacketType">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="primary_icon_name">edit-find-symbolic</property>
             <property name="primary_icon_activatable">False</property>
             <property name="primary_icon_sensitive">False</property>
+            <property name="completion">_entrycompletionPacketTypeFilter</property>
           </object>
           <packing>
             <property name="expand">False</property>
@@ -216,11 +220,25 @@
           </packing>
         </child>
         <child>
-          <object class="GtkTreeView">
+          <object class="GtkScrolledWindow">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <child internal-child="selection">
-              <object class="GtkTreeSelection"/>
+            <property name="hexpand">True</property>
+            <property name="vexpand">True</property>
+            <property name="shadow_type">in</property>
+            <property name="min_content_height">220</property>
+            <property name="max_content_height">800</property>
+            <property name="propagate_natural_width">True</property>
+            <child>
+              <object class="GtkTreeView" id="_treeFilterPacketType">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="hexpand">True</property>
+                <property name="hscroll_policy">natural</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection"/>
+                </child>
+              </object>
             </child>
           </object>
           <packing>
