--- a/EvoS.PacketInspector/MainWindow.glade
+++ b/EvoS.PacketInspector/MainWindow.glade
@@ -12,6 +12,16 @@
     <property name="can_focus">False</property>
     <property name="stock">gtk-find</property>
   </object>
+  <object class="GtkImage" id="imageOpen">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-open</property>
+  </object>
+  <object class="GtkImage" id="imageOpen1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-open</property>
+  </object>
   <object class="GtkWindow" id="MainWindow">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Packet Inspector</property>
@@ -30,12 +40,26 @@
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <child>
-              <object class="GtkButton" id="buttonOpen">
-                <property name="label">gtk-open</property>
+              <object class="GtkButton" id="_buttonOpenFolder">
+                <property name="label">Load Folder</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="use_stock">True</property>
+                <property name="image">imageOpen1</property>
+                <property name="always_show_image">True</property>
+                <accelerator key="o" signal="activate" modifiers="GDK_CONTROL_MASK"/>
+              </object>
+              <packing>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkButton" id="_buttonOpenReplay">
+                <property name="label">Load Replay</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="image">imageOpen</property>
                 <property name="always_show_image">True</property>
                 <accelerator key="o" signal="activate" modifiers="GDK_CONTROL_MASK"/>
               </object>
@@ -54,20 +78,21 @@
                 <accelerator key="f" signal="activate" modifiers="GDK_CONTROL_MASK"/>
               </object>
               <packing>
-                <property name="position">1</property>
+                <property name="position">2</property>
               </packing>
             </child>
           </object>
           <packing>
             <property name="expand">False</property>
             <property name="fill">True</property>
-            <property name="position">1</property>
+            <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkPaned">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
+            <property name="vexpand">True</property>
             <property name="orientation">vertical</property>
             <property name="position">320</property>
             <property name="position_set">True</property>
